# DNSResolvr

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
comp/cache/: CacheManager.py  RedisManager.py  __init__.py
comp/dns/: DNSAnswer.py  DNSHeader.py  DNSMessage.py  DNSQuerier.py  DNSQuestion.py  DNSUtils.py
comp/exc/: BadServerNameException.py
comp/logging/: LogFlush.py  Logger.py  __init__.py
comp/models/: ReturnRecord.py  __init__.py
comp/net/: connection.py
comp/server/: server.py
comp/utils/: ConfigManager.py  UTCTimeStampCalculator.py  __init__.py
kube/: dns-resolver-configmap.yaml  dns-resolver.yaml  redis-configmap.yaml  redis-deployment.yaml  redis-service.yaml  redis.yaml
test/: step1.py  step2.py  step3.py  test_address_with_cname.py  test_invalid_server.py  test_logging.py  test_step1.py  test_step2.py  test_step2AlternativeDNS.py  test_step3.py  test_step4.py  test_step4_no_additional_ans.py  test_step4_no_compression.py
test/cache/: test_cache.py
